2010-10-19  Eric Seidel  <eric@webkit.org>

        Unreviewed.

        commit-queue gets stuck when release-patch returns 404
        https://bugs.webkit.org/show_bug.cgi?id=47935

        Turns out ClientForm gets upset if passed an int() instead of a string type.
        Yay for untestable code.

        * Scripts/webkitpy/common/net/statusserver.py:

2010-10-19  Eric Seidel  <eric@webkit.org>

        Unreviewed.  Will get Adam's commentary after his meeting
        for now this gets the commit-cluster back running.

        commit-queue gets stuck when release-patch returns 404
        https://bugs.webkit.org/show_bug.cgi?id=47935

        I taught NetworkTransaction the basics of 404 handling.
        We'll want to go back and teach it how to handle urllib2 404's too
        and then deploy it to the places that want it.

        * QueueStatusServer/handlers/releasepatch.py:
        * Scripts/webkitpy/common/net/buildbot.py:
        * Scripts/webkitpy/common/net/networktransaction.py:
        * Scripts/webkitpy/common/net/statusserver.py:

2010-10-19  Eric Seidel  <eric@webkit.org>

        Unreviewed.  Fixing typos in my previous commit.

        Make patch release explicit and not a magic part of "retry" status
        https://bugs.webkit.org/show_bug.cgi?id=47909

        All of these typos again due to our inability to unit
        test much of this code.  I added one unit test where
        possible.  activeworkitems_unittest.py will be in a separate patch.

        * QueueStatusServer/handlers/releasepatch.py:
        * QueueStatusServer/main.py:
        * QueueStatusServer/model/activeworkitems.py:
        * QueueStatusServer/model/workitems.py:
        * QueueStatusServer/model/workitems_unittest.py:
        * QueueStatusServer/templates/releasepatch.html:
        * Scripts/webkitpy/common/net/statusserver.py:

2010-10-19  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] Use webkit's TestNetscapePlugIn in DRT mac